--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Mike Dune",
+  "author": "daihy",
   "license": "ISC",
   "dependencies": {
-    "crawler": "^1.2.0",
-    "lodash": "^4.17.11",
-    "scrape-it": "^5.0.5"
+    "axios": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "del": "^5.0.0"
   }
 }
